--- a/Unstickd/Components/App.razor
+++ b/Unstickd/Components/App.razor
@@ -24,6 +24,21 @@
     <!-- Blazored.TextEditor scripts (order matters: formatter before main) -->
     <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
     <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.downloadFile = (filename, contentType, content) => {
+            const blob = new Blob([content], { type: contentType });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+            URL.revokeObjectURL(url);
+        };
+    </script>
+    <script src="js/inactivity.js"></script>
     <!-- Blazor framework (must be last) -->
     <script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
