Refactor Editor to Continuous Flow with CSS Pagination

--- a/Unstickd/Components/Layout/NavMenu.razor
+++ b/Unstickd/Components/Layout/NavMenu.razor
@@ -21,14 +21,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="characters">
-                <span class="bi bi-people-fill-nav-menu" aria-hidden="true"></span> Characters
-            </NavLink>
-        </div>
-        
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="places">
-                <span class="bi bi-map-fill-nav-menu" aria-hidden="true"></span> Places
+            <NavLink class="nav-link" href="notebooks">
+                <span class="bi bi-journal-album-nav-menu" aria-hidden="true"></span> Notebooks
             </NavLink>
         </div>
     </nav>
