--- a/Unstickd/Components/Layout/NavMenu.razor
+++ b/Unstickd/Components/Layout/NavMenu.razor
@@ -25,6 +25,16 @@
                 <span class="bi bi-journal-album-nav-menu" aria-hidden="true"></span> Notebooks
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="characters">
+                <span class="bi bi-person" aria-hidden="true"></span> Characters
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="places">
+                <span class="bi bi-geo-alt" aria-hidden="true"></span> Places
+            </NavLink>
+        </div>
     </nav>
 </div>
 
